--- a/kadai_005/kadai_005.ipynb
+++ b/kadai_005/kadai_005.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "t0nOf6dtV8bw"
       },
@@ -11,7 +11,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "75.0\n"
+            "75.0cm²\n"
           ]
         }
       ],
@@ -22,7 +22,7 @@
         "\n",
         "trapezoid = (top_side + bottom_side) * height /2\n",
         "\n",
-        "print(trapezoid + \"cm²\")"
+        "print(f\"{trapezoid}cm²\")"
       ]
     },
     {
