水曜日の出力

--- a/kadai_007/kadai_007.ipynb
+++ b/kadai_007/kadai_007.ipynb
@@ -2,24 +2,24 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['月曜日は晴れです', '火曜日は雨です', '水曜日は晴れです', '木曜日は晴れです', '金曜日は曇りです', '土曜日は曇りのち雨です', '日曜日は雷雨です']\n",
-            "{'mon': '晴れ', 'tue': '雨', 'wed': '晴れ', 'thu': '晴れ', 'fri': '曇り', 'stu': '曇りのち雨', 'sun': '雷雨'}\n"
+            "水曜日は晴れです\n",
+            "晴れ\n"
           ]
         }
       ],
       "source": [
         "array = [\"月曜日は晴れです\" , \"火曜日は雨です\" , \"水曜日は晴れです\" , \"木曜日は晴れです\" , \"金曜日は曇りです\" , \"土曜日は曇りのち雨です\" , \"日曜日は雷雨です\"]\n",
-        "print(array)\n",
+        "print(array[2])\n",
         "\n",
         "dictionary = {\"mon\" : \"晴れ\" , \"tue\" : \"雨\" , \"wed\" : \"晴れ\" , \"thu\" : \"晴れ\" , \"fri\" : \"曇り\" , \"stu\" : \"曇りのち雨\" , \"sun\" : \"雷雨\"}\n",
-        "print(dictionary)"
+        "print(dictionary[\"wed\"])"
       ]
     },
     {
