--- a/kadai_017/Untitled1.ipynb
+++ b/kadai_017/Untitled1.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {
         "id": "90YSVfEyOTs8"
       },
@@ -11,8 +11,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "侍太郎\n",
-            "35\n"
+            "森さんは大人です。\n",
+            "林さんは大人です。\n",
+            "田中さんは大人ではありません。\n",
+            "佐藤さんは大人です。\n"
           ]
         }
       ],
@@ -22,28 +24,24 @@
         "    self.name = name\n",
         "    self.age = age\n",
         "\n",
-        "  def set_name(self,name):\n",
-        "    self.name = name\n",
-        "    \n",
-        "  def set_age(self,age):\n",
-        "    self.age = age\n",
-        "\n",
-        "  def printinfo(self):\n",
-        "    print(self.name)\n",
-        "    print(self.age)\n",
+        "  def check_adult(self):\n",
+        "    if self.age >= 20:\n",
+        "      print(f\"{self.name}さんは大人です。\")\n",
+        "    else :\n",
+        "      print(f\"{self.name}さんは大人ではありません。\")\n",
         "\n",
         "\n",
-        "human = Human(\"侍太郎\", 35)\n",
+        "human_1 = Human(\"森\", 25)\n",
+        "human_2 = Human(\"林\", 23)\n",
+        "human_3 = Human(\"田中\",15)\n",
+        "human_4 = Human(\"佐藤\", 30)\n",
         "\n",
-        "human.printinfo()\n"
+        "humans = [human_1, human_2, human_3, human_4]\n",
+        "\n",
+        "for human in humans:\n",
+        "  human.check_adult()\n",
+        "\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
